@@ -1,5 +1,7 @@
 # v1.6 _(2020-03-01)_
 - Removed an erroneous `Monoid` constraint from `SeriesNE`
+- Added locations to a few node types.
+- Wrapped 'Text' nodes in 'Fragment'.
 
 # v1.5.0.1 _(2020-02-24)_
 - Added `CHANGELOG` to its own file.
